add feacture products variants
